# ETL_Testing_GUI

./: .gitignore  .gitmodules  lpgbt_adc_calibrations.json  main.py  pyproject.toml
GUI/: app.py  arduino_panel.py  arduino_panel.py~  chiller_panel.py  hv_panel.py  hv_panel.py~  lv_panel.py  panel.py  qt_ansi.py  results_panel.py  tamalero_panel.py  terminal_panel.py
IV_Curves/40024/2025-10-08-17-48-58/: IV_Curve_40024_2025-10-08-17-48-58.csv
IV_Curves/MP40024/2025-10-08-18-27-37/: IV_Curve_MP40024_2025-10-08-18-27-37.csv
Sensor Data/: sensor_data.csv  sensor_data_2025-11-07-13-06-03.csv  sensor_data_2025-11-07-13-07-12.csv  sensor_data_2025-11-07-13-07-53.csv
configs/: main.yaml
docs/: README.md  qaqc_plan.md
drivers/Arduino/: arduino_driver.py  platformio.ini  sensors.py
drivers/Chiller/: chiller_driver.py
drivers/HV/: HVPowerSupply.py  hv_driver.py
drivers/LV/: lv_driver.py
qaqc/: README.md  __init__.py  errors.py  session.py  setup_config.py  setup_context.py  test_registry.py  test_runner.py
qaqc/tests/: __init__.py  baseline.py  mux64_value_check.py  noisewidth.py  readout_board_communication.py  readout_board_connection.py
scripts/: FlashArduino.sh  download_kcu_firmware.sh  flash_arduino.sh  flash_kcu.sh  load_udev.sh  setup_env.sh  setup_ipbus.sh  setup_python.sh  setuppython.sh  sync_python_deps.sh
src/: chiller_client.py  julabo.py  process_client.py  recorder.py  recording.py  sensors.py  tester.py  tester.py~  worker_base.py
tests/: test_uhal.sh
udev/: 99-ETL_Testing_GUI.rules  ETL_Testing_GUI.rules
(+10 files in other folders)
